--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-        <h1>Fundamentos de Promesas y Fetch</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <!-- <h1>Programa de Funciones</h1> -->
+    <!-- <h1>Desarrollo Web Progresivo (PWA)</h1> -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <!--<h1>Fundamentos de Promesas y Fetch</h1>
         <img id="IdImg1" width="100" height="100" src="">
         <img id="IdImg2" width="100" height="100" src="">
         <script src="fetch-4.js">
-        </script>
-</body>
+        </script>-->
+  </body>
 </html>
